syntax = "proto3";
package Charlotte.Proto;
option csharp_namespace = "Charlotte.Proto";
option cc_enable_arenas = true;


////////////////////////////////////////////////////////////////
//  ErrorCode
////////////////////////////////////////////////////////////////
enum ErrorCode
{
	//SUCCED
	SUCCED      		    			=0;
	GUILD_ADD_SUCCED					=1;
	FRIEND_ADD_SUCCED					=2;
	GUILD_EXITS_SUCCED					=3;
	GUILD_ADMIN_TARGET					=4;
	
	
	//FAIL
	ERROR_FAIL 							=200;
	ERROR_USER_NO_EXIST 				=201;
	ERROR_USER_EXIST 					=202;
	ERROR_PASSWARD 	 					=203;
	ERROR_USER_ONLINE 					=204;
	ERROR_USER_ONLINE_TITLE				=205;
	ERROR_CHAT_USER_NO_ONLINE			=206;
	ERROR_ADD_FRIEND_USER_NO_ONLINE 	=207;
	ERROR_ADD_FRIEND_USER_EXIST			=208;
	ERROR_ADD_FRIEND_USER_EXIST_TITLE 	=209;
	ERROR_ADD_REQUEST_USER_NO_ONLINE  	=210;
	ERROR_ADD_USER_REJECT			  	=211;
	ERROR_GUILD_NO_EXIST			  	=212;
	ERROR_TEAM_USER_NO_ONLINE		  	=213;
	ERROR_TEAM_USER_EXIST_TEAM		  	=214;
	ERROR_GUILD_EXIST				  	=215;
	ERROR_GUILD_NAME_EXIST			  	=216;
	ERROR_GUILD_APPROVAL_TITLE		  	=217;
	ERROR_GUILD_APPLY_EXIST			  	=218;
	ERROR_GUILD_EXITS_FAIL				=219;
	ERROR_ADMIN_GUILD_FAIL				=220;
	ERROR_QUEUE_NO_EXIST				=221;
	ERROR_QUEUE_UNFINISHED				=222;
}

////////////////////////////////////////////////////////////////
//  User
////////////////////////////////////////////////////////////////
message NUserInfo 
{
	int32 id = 1;
	NPlayerInfo player = 2;
}

message NPlayerInfo 
{
	int32 id = 1;
	repeated NCharacterInfo characters = 2;
}

////////////////////////////////////////////////////////////////
//  Character
////////////////////////////////////////////////////////////////
message NCharacterInfo 
{
	int32 id = 1;					//Net Character DBID
	int32 config_id = 2;			//Net Character ConfigID
	int32 entity_id =3;				//Net Character EntityID
	string name = 4;				//Net Character Name
	CHARACTER_TYPE type = 5;		//Net Character Type
	CHARACTER_CLASS class = 6;		//Net Character Class
	int32 level = 7;				//Net Character Level
	bytes mapId = 8;				//Net Character MapID
	NEntity entity = 9;				//Net Character Entityinfo
	int64 gold = 10;				//Net Character gold
	repeated NItemInfo Items =11;	//Net iteminfo
	NBagInfo Bag =12;				//Net BagInfo
	bytes Equips=13;				//Net Equipbytes
	repeated NQuestInfo quest=14;	//Net QuestInfo
	repeated NFriendInfo Friend=15;	//Net FriendInfo
	repeated NTeamInfo Team=16;		//Net TeamInfo
	NGuildInfo guild =17;			//Net GuildInfo
}

enum CHARACTER_TYPE
{
	Player 	=0;
	NPC 	=1;
	Monster =2;
}

enum CHARACTER_CLASS
{
	NONE 	=0;
	WARRIOR =1;
	WIZARD 	=2;
	ARCHER 	=3;
}

enum CHARACTER_STATE
{
	IDLE = 0;
	MOVE = 1;
	Death= 2;
}

message NItemInfo
{
	int32 id =1;
	int32 count =2;
}

enum ITEM_TYPE
{
	NORMAL 	 =0;
	MATERIAL =1;
	TASK  	 =2;
	EQUIP 	 =3;
	RIDE  	 =4;
}

message NBagInfo
{
	int32 Unlocked =1;
	bytes Items =2;
}

enum EQUIP_SLOT
{
	WEAPON		=0;
	ACCESSORY	=1;
	HELMET		=2;
	CHEST		=3;
	SHOULDER	=4;
	PANTS		=5;
	BOOTS		=6;
	SLOT_MAX	=7;
}

message NGuildInfo
{
	int32 id =1;							//Character ID
	string guild_name =2;					//Guild Name
	int32 leaderId =3;						//Guild LeaderID
	string leadername =4;					//Guild LeaderName
	string notice =5;						//Guild Title
	int32 memberCount =6;					//Guild MemberCharacterCount
	repeated NGuildMemberInfo members =7;	//Guild MemberInfo
	repeated NGuildApplyInfo applies =8;	//Guild ApplyInfo
	int64 createTime =9;					//Guild CreateTime
}

message NGuildMemberInfo
{
	int32 id =1;			//Member DBID
	int32 characterId =2;	//Member CharacterID
	GUILD_TITLE title =3;	//Member Guild
	NCharacterInfo info =4; //Net CharacterInfo
	int64 joinTime =5;		//
	int64 lastTime =6;		//
	int32 status =7;		//CurMemberState
}

message NGuildApplyInfo
{
	int32 guild_id =1;
	int32 characterId =2;
	string name =3;
	int32 class =4;
	int32 level =5;
	APPLY_RESULT result =6;
}

enum GUILD_TITLE
{
	NONE 		   =0;
	PRESIDENT 	   =1;
	VICE_PRESIDENT =2;
}

enum APPLY_RESULT
{
	NONE   =0;
	ACCEPT =1;
	REJECT =2;
}

enum GUILD_ADMIN_COMMAND
{
	INIT = 0;
	KICKOUT =1;
	PROMOTE =2;
	DEPOST  =3;
	TANSFER =4;
}

message ChatMessage
{
	CHAT_CHANNEL channel = 1;
	int32 id =2;
	int32 from_id =3;
	string from_name =4;
	int32 to_id =5;
	string to_name =6;
	string message =7;
	double time =8;
}

enum CHAT_CHANNEL
{
	ALL = -1;
	INIT = 0;
	LOCAL =1;
	WORLD =2;
	SYSTEM =4;
	PRIVATE =8;
	TEAM =16;
	GUILD= 32;
}

message NQuestInfo
{
	int32 quest_id			=1;
	int32 quest_guid		=2;
	QUEST_STATUS status		=3;
	repeated int32 tgrgets  =4;
}

enum QUEST_STATUS
{
	IN_PROGRESS =0;
	COMPLATED	=1;
	FINISHED 	=2;
	FAILED	 	=3;
}

enum QUEST_LIST_TYPE
{
	ALL =0;
	IN_PROGRESS =1;
	FINISHED =2;
}

message NTeamInfo
{
	int32 id =1;
	int32 leader =2;
	repeated NCharacterInfo members =3;
}

message NFriendInfo
{
	int32 id =1;
	NCharacterInfo friendInfo =2;
	int32 status =3;
}

////////////////////////////////////////////////////////////////
//  StateNotify
////////////////////////////////////////////////////////////////
message StateNotify
{
	repeated NStatus status =1;
}

message NStatus
{
	STATUS_TYPE type =1;
	STATUS_ACTION action =2;
	int32 id =3;
	int32 value =4;
}

enum STATUS_ACTION
{
	UPDATE= 0;
	ADD =1;
	DELETE =2;
}

enum STATUS_TYPE
{
	MONEY =0;
	EXP =1;
	SKILL_POINT =2;
	ITEM =3;
}

////////////////////////////////////////////////////////////////
//  Entities
////////////////////////////////////////////////////////////////
message NEntitySync 
{
	//int32 id = 1;
	NEntity entity = 1;
	ENTITY_EVENT event = 2;
}

message NEntity 
{
	int32 id = 1;
	int32 speed = 2;
	NVector3 position = 3;
	NVector3 direction = 4;
}

message NVector3
{
	int32 x = 1;
	int32 y = 2;
	int32 z = 3;
}

enum ENTITY_EVENT
{
	NONE 	  =0;
	IDLE 	  =1;
	MOVE_FWD  =2;
	MOVE_BACK =3;
	JUMP 	  =4;
	Rush 	  =5;
	Attack 	  =6;
	SkillA 	  =7;
	SkillB 	  =8;
	SkillC 	  =9;
	OpenUI	  =10;
	Death     =11;
}

////////////////////////////////////////////////////////////////
//  Messages
////////////////////////////////////////////////////////////////
message NetMessage
{
	NetMessageRequest Request = 1;
	NetMessageResponse Response = 2;
}

message NetMessageRequest
{
	UserRegisterRequest userRegister = 1;
	UserLoginRequest userLogin = 2;
	UserCreateCharacterRequest createChar = 3;
	UserGameEnterRequest gameEnter = 4;
	UserGameLeaveRequest gameLeave = 5;

	MapCharacterEnterRequest mapCharacterEnter = 6;
	MapEntitySyncRequest mapEntitySync = 8;
	MapTeleportRequest mapTeleport = 9;

	ItemBuyRequest itemBuy =10;
	ItemEquipRequest itemEquip=11;

	QuestListRequest questList=12;
	QuestAcceptRequest questAccept=13;
	QuestSubmitRequest questSubmit=14;

	FriendAddRequest friendAddReq=15;
	FriendAddResponse friendAddRes=16;
	FriendListRequest friendList=17;
	FriendRemoveRequest friendRemove=18;

	TeamInviteRequest teamInviteReq=19;
	TeamInviteResponse teamInviteRes=20;
	TeamInfoRequest teamInfo=21;
	TeamLeaveRequest teamLeave=22;

	GuildCreateRequest guildCreate=23;
	GuildJoinRequest guildJoinReq=24;
	GuildJoinResponse guildJoinRes=25;
	GuildRequest guild=26;
	GuildLeaveRequest guildLeave=27;
	GuildListRequest guildList=28;
	GuildAdminRequest guildAdmin=29;

	ChatRequest chat=30;
}

message NetMessageResponse
{
	UserRegisterResponse userRegister = 1;
	UserLoginResponse userLogin = 2;
	UserCreateCharacterResponse createChar = 3;
	UserGameEnterResponse gameEnter = 4;
	UserGameLeaveResponse gameLeave = 5;

	MapCharacterEnterResponse mapCharacterEnter = 6;
	MapCharacterLeaveResponse mapCharacterLeave = 7;
	MapEntitySyncResponse mapEntitySync = 8;	

	ItemBuyResponse itemBuy=10;
	ItemEquipResponse itemEquip=11;

	QuestListResponse questList=12;
	QuestAcceptResponse questAccept=13;
	QuestSubmitResponse questSubmit=14;

	FriendAddRequest friendAddReq=15;
	FriendAddResponse friendAddRes=16;
	FriendListResponse friendList=17;
	FriendRemoveResponse friendRemove=18;

	TeamInviteRequest teamInviteReq=19;
	TeamInviteResponse teamInviteRes=20;
	TeamInfoResponse teamInfo=21;
	TeamLeaveResponse teamLeave=22;

	GuildCreateResponse guildCreate=23;
	GuildJoinRequest guildJoinReq=24;
	GuildJoinResponse guildJoinRes=25;
	GuildResponse guild=26;
	GuildLeaveResponse guildLeave=27;
	GuildListResponse guildList=28;
	GuildAdminRespnonse guildAdmin=29;

	ChatResponse chat=30;

	StateNotify stateNotify =100;
}

enum RESULT
{
	SUCCESS =0;
	FAILED 	=1;
}

/******************************************************************************************/

////////////////////////////////////////////////////////////////
//  User Protocol
////////////////////////////////////////////////////////////////
message UserLoginRequest 
{
	string user = 1;
	string passward = 2;
}

message UserLoginResponse 
{
	RESULT result = 1;
	uint32 errorcode =2;
	NUserInfo userinfo = 3;
}

message UserRegisterRequest
{
	string user = 1;
	string passward = 2;
}

message UserRegisterResponse 
{
	RESULT result = 1;
	uint32 errorcode =2;
}

message UserCreateCharacterRequest
{
	string name = 1;
	CHARACTER_CLASS class = 2;
}

message UserCreateCharacterResponse 
{
	RESULT result = 1;
	uint32 errorcode =2;
	repeated NCharacterInfo characters = 3;
}

message UserGameEnterRequest
{
	int32 characterIdx = 1;
	int32 characterId  = 2;
}

message UserGameEnterResponse 
{
	RESULT result = 1;
	uint32 errorcode =2;
	NCharacterInfo character = 3;
}

message UserGameLeaveRequest
{

}

message UserGameLeaveResponse 
{
	RESULT result = 1;
	uint32 errorcode =2;
}

////////////////////////////////////////////////////////////////
//  Map Protocol
////////////////////////////////////////////////////////////////
message MapCharacterEnterRequest
{
	bytes mapId = 1;
}

message MapCharacterEnterResponse
{
	bytes mapId = 1;
	repeated NCharacterInfo characters = 2;
}

message MapCharacterLeaveResponse
{
	int32 entity_id = 1;
}


message MapEntitySyncRequest
{
    NEntitySync entitySync = 1;
}


message MapEntitySyncResponse
{
    repeated NEntitySync entitySyncs = 2;
}

message MapTeleportRequest
{
	int32 teleporterId = 1;
}

////////////////////////////////////////////////////////////////
//  BagSystem Protocol
////////////////////////////////////////////////////////////////
message BagSaveResponst
{
	NBagInfo BagInfo =1;
}

message BagSaveRequese
{
	RESULT result =1;
	uint32 errorcode =2;
}

////////////////////////////////////////////////////////////////
//  ShopSystem Protocol
////////////////////////////////////////////////////////////////
message ItemBuyRequest
{
	int32 shopId =1;
	int32 shopItemId =2;
}

message ItemBuyResponse
{
	RESULT result =1;
	uint32 errorcode =2;
}

////////////////////////////////////////////////////////////////
//  EquipSystem Protocol
////////////////////////////////////////////////////////////////
message ItemEquipRequest
{
	int32 slot=1;
	int32 itemId=2;
	bool isEquip=3;
}

message ItemEquipResponse
{
	RESULT result =1;
	uint32 errorcode =2;
}

////////////////////////////////////////////////////////////////
//  QuestSystem Protocol
////////////////////////////////////////////////////////////////
message QuestListRequest
{
	QUEST_LIST_TYPE listType =1;
}

message QuestListResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	repeated NQuestInfo quests =3;
}

message QuestAcceptRequest
{
	int32 quest_id =1;
}

message QuestAcceptResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NQuestInfo quest=3;
}

message QuestSubmitRequest
{
	int32 quest_id =1;
}

message QuestSubmitResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NQuestInfo quest=3;
}

message QuestAbandonRequest
{
	int32 quest_id =1;
}

message QuestAbandonResponse
{
	RESULT result =1;
	uint32 errorcode =2;
}

////////////////////////////////////////////////////////////////
//  FriendSystem Protocol
////////////////////////////////////////////////////////////////
message FriendAddRequest
{
	int32 from_id =1;
	string from_name =2;
	int32 to_id =3;
	string to_name =4;
}

message FriendAddResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	FriendAddRequest request =3;
}

message FriendListRequest
{

}

message FriendListResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	repeated NFriendInfo friends=3;
}

message FriendRemoveRequest
{
	int32 id =1;
	int32 friendID =2;
}

message FriendRemoveResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	int32  id=3;
}

////////////////////////////////////////////////////////////////
//  TeamSystem Protocol
////////////////////////////////////////////////////////////////
message TeamInviteRequest
{
	int32 team_id =1;
	int32 from_id =2;
	string from_name =3;
	int32 to_id =4;
	string to_name =5;
}

message TeamInviteResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	TeamInviteRequest request =3;
}

message TeamInfoRequest
{

}

message TeamInfoResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NTeamInfo team =3;
}

message TeamLeaveRequest
{
	int32 team_id =1;
	int32 characterId =2;
}

message TeamLeaveResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	int32 characterId =3;
}

////////////////////////////////////////////////////////////////
//  GuildSystem Protocol
////////////////////////////////////////////////////////////////
message GuildCreateRequest
{
	string Guild_name =1;
	string Guild_notice =2;
}

message GuildCreateResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NGuildInfo guildinfo =3;
}
// ApplyGuildRequest  [membr -> server -> leader ]
message GuildJoinRequest
{
	NGuildApplyInfo apply =1;
}
// ApplyGuildResponse [ server -> leader ]
message GuildJoinResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NGuildApplyInfo apply =3;
}

message GuildListRequest
{

}

message GuildListResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	repeated NGuildInfo guilds =3;
}

message GuildRequest
{

}

message GuildResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	NGuildInfo guildInfo =3;
}

message GuildLeaveRequest
{

}

message GuildLeaveResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	repeated NGuildInfo guilds =3;
}

message GuildAdminRequest
{
	GUILD_ADMIN_COMMAND command =1;
	int32 target =2;
}

message GuildAdminRespnonse
{
	RESULT resutl =1;
	uint32 errorcode =2;
	GuildAdminRequest command =3;
	repeated NGuildInfo guilds =4;
}

////////////////////////////////////////////////////////////////
//  ChatSystem Protocol
////////////////////////////////////////////////////////////////
message ChatRequest
{
	ChatMessage message =1;
}

message ChatResponse
{
	RESULT result =1;
	uint32 errorcode =2;
	repeated ChatMessage locaMessages =3;
	repeated ChatMessage worldMessages =4;
	repeated ChatMessage systemMessages =5;
	repeated ChatMessage privateMessages =6;
	repeated ChatMessage teamMessages =7;
	repeated ChatMessage guildMessages =8;
}